# embedded-pg

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
examples/: collections.rs  collections_heapless.rs  concurrency.rs  exception_interrupt.rs  exit_codes.rs  hal.rs  hello.rs  pac.rs  panicking_opts.rs  peripheral.rs  peripheral_play.rs  peripherals_singleton.rs  perph_state.rs
src/: main.rs
