[package]
authors = ["me"]
name = "embedded-pg"
readme = "README.md"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
panic-halt = "1.0.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# embedded-alloc = "0.6.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

[[bin]]
name = "embedded-pg"
test = false
bench = false

[profile.release]
codegen-units = 1 # optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizationsdebug = true